@@ -211,6 +211,10 @@
      [sshd.8]
      clarify Allow(Groups|Users) and Deny(Groups|Users); suggestion from
      allard@oceanpark.com; ok markus@
+   - markus@cvs.openbsd.org 2002/01/21 15:13:51
+     [sshconnect.c]
+     use read_passphrase+ECHO in confirm(), allows use of ssh-askpass
+     for hostkey confirm.
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7358,4 +7362,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1782 2002/01/22 12:33:45 djm Exp $
+$Id: ChangeLog,v 1.1783 2002/01/22 12:34:12 djm Exp $
